tests-integration/tests/roundtrip/native-errors/syntax-errors/unexpected-token/unexpected-token.expected-error.txt
Error: model.eprime:1:18:
  |
1 | find x: int(1..2))
  |                  ^
Unexpected )


